--- a/index.html
+++ b/index.html
@@ -1,101 +1,225 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-<div class="page">
-  <header class="header">
-    <div class='logo logo_place_header'>
-      <img class = 'logo_place_header' src="./images/logo_place_header.svg" alt="logo_place_header"> 
-    </div> 
-      <h1 class ='header__title'>Научиться учиться</h1>
-       <p class ='header__subtitle'> Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href ='#' class ='header__link link'>Узнать</a>
-         </p>
-         <img class = 'header__main-illustration' src="./images/two_again.png" alt="two_again"> 
-            <div class ='header__square-pic'></div>
-       
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Научиться учиться</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <div class="logo logo_place_header"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a href="#" class="header__link link">Узнать &#8594;</a>
+        </p>
+        <img
+          class="header__main-illustration"
+          src="./images/two_again.png"
+          alt="two_again"
+        />
+        <div class="header__square-pic"></div>
+      </header>
 
- <main class="content">
-  <section class="description">
-    <div class ='two-colums'>
-      <h2 class="two-colums__brief"> Главные проблемы в обучении</h2> 
-      <div class ='two-colums__main_text'>
-       <p class ="two-colums__paragraph"> Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
-      Мы готовимся к экзаменам и учим билеты. 
-      Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, 
-      но часто в итоге это не дает нам реального знания. 
-      Зубрежка быстро выветривается и не приносит пользы.</p> 
-       
-     <p class = "two-colums__paragraph">
-        <span class ='two-colums__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим
-          делать? </p>
-          <p class ='two-colums__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
-            захватывающим.
-            Эти же техники применяются на примере обучения в Практикуме.</p>
-     </div>
+      <main class="content">
+        <section class="description">
+          <div class="two-colums">
+            <h2 class="two-colums__brief">Главные проблемы в обучении</h2>
+            <div class="two-colums__main_text">
+              <p class="two-colums__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+
+              <p class="two-colums__paragraph">
+                <span class="two-colums__span-accent">Вывод:</span> учиться тоже
+                нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-colums__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="digits">
+          <div class="section__title">Цифры и факты</div>
+          <div class="section__subtitle">Про учёбу и мозг</div>
+          <div class="table digits__table">
+            <div class="table__cell">
+              <h2 class="table__heading">86 миллиардов</h2>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">2,1 миллиарда</h2>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">1000 тарабайт</h2>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">500 триллионов</h2>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">420 миллионов</h2>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">17-20 лет</h2>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">1885 год</h2>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h2 class="table__heading">1889 год</h2>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фреймана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link"> Подробнее &#8594; </a>
+        </section>
+
+        <section class="kaufman">
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">1</h3>
+              <p class="table__text">Выберите привлекательный проект.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">2</h3>
+              <p class="table__text">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">3</h3>
+              <p class="table__text">Определите целевой уровень мастерства.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">4</h3>
+              <p class="table__text">Разбейте навык на элементы.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">5</h3>
+              <p class="table__text">
+                Приготовьте всё необходимое для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">6</h3>
+              <p class="table__text">Устраните препятствия для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">7</h3>
+              <p class="table__text">Выделите специальное время для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">8</h3>
+              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">9</h3>
+              <p class="table__text">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">10</h3>
+              <p class="table__text">
+                Уделяйте внимание количеству и скорости.
+              </p>
+            </div>
+          </div>
+          <div class="kaufman__triangle rotation-triangle"></div>
+        </section>
+      </main>
     </div>
-  </section>
 
-   
-  <section class="digits">
-    <div class ='section__title'> Цифры и факты </div>
-     <div class ="section__subtitle"> Про учёбу и мозг</div> 
-       <div class="table digits__table">
-          <div class ="table__cell"> 
-          <h2 class ="table__heading"> 86 миллиардов</h2>
-          <p class = "table__text"> Число нейронов в мозге человека</p>
-          </div>
-          <div class ="table__cell"> 
-        <h2 class ="table__heading"> 2,1 миллиарда</h2>
-        <p class = "table__text"> Число нуждающихся в повышении квалификации</p>
-        <p class = "table__text"> Всемирный Банк, 2017</p>
-          </div>
-          <div class ="table__cell"> 
-        <h2 class ="table__heading"> 1000 тарабайт</h2>
-        <p class = "table__text"> Объём памяти человека</p>
-          </div>
-          <div class ="table__cell"> 
-      <h2 class ="table__heading"> 500 триллионов</h2>
-      <p class = "table__text"> Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class ="table__cell"> 
-    <h2 class ="table__heading"> 420 миллионов</h2>
-    <p class = "table__text"> Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-    <p class = "table__text"> Всемирный Банк, 2017</p>
-          </div>
-          <div class ="table__cell"> 
-    <h2 class ="table__heading"> 17-20 лет</h2>
-    <p class = "table__text"> Пик обучаемости</p>
-          </div>
-          <div class ="table__cell"> 
-            <h2 class ="table__heading"> 1885 год</h2>
-            <p class = "table__text"> Открытие кривой забывания </p>
-          </div>
-          <div class ="table__cell"> 
-            <h2 class ="table__heading"> 1889 год </h2>
-            <p class = "table__text"> Открытие условного рефлекса</p>
-          </div>
-       </div>
-   </section> 
-
-   
-
-   </section>
-
-  <section class="kaufman">
-   </section>
-</main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; Денис Малабуйок</p>
+        </div>
+        <nav class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="link footer__link">Главная</a>
+            </li>
+            <li>
+              <a href="#" class="link footer__link">Концепция</a>
+            </li>
+            <li>
+              <a href="#" class="link footer__link">Наставники</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul class="footer__column-links">
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=fJ2AxT3qHPE"
+                class="link footer__link"
+              >
+                <img
+                  src="./images/youtube_color_white.svg"
+                  class="footer__social-icon"
+                />
+                YouTube</a
+              >
+            </li>
+            <li>
+              <a href="https://vk.com/" class="link footer__link"
+                ><img
+                  src="./images/vk_color_white.svg"
+                  class="footer__social-icon"
+                />ВКонтакте</a
+              >
+            </li>
+            <li>
+              <a href="https://www.tiktok.com/" class="link footer__link"
+                ><img
+                  src="./images/tiktok_color_white.svg"
+                  class="footer__social-icon"
+                />ТикТок</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </footer>
-  </div> 
-</div>
-</body>
+  </body>
 </html>
